@@ -198,7 +198,7 @@ export.pdfExportCommand =
 ; fileImportRoot The directory to start, the default is:
 ;                GEMS_ROOT_DIR . '\var\auto_import'
 ;-------------------------------------------------------
-;fileImportRoot = 
+;fileImportRoot =
 
 ;-------------------------------------------------------
 ; HTTP SECTION
@@ -408,6 +408,15 @@ tokens.chars  = 23456789abcdefghijklmnopqrstuvwxyz
 tokens.format = XXXX\-XXXX;
 tokens.from   = 01;
 tokens.to     = ol;
+
+;-------------------------------------------------------
+; TRACK SECTION
+;
+; requireValidUntil: When true a valid until date must
+;                    be defined for each round.
+;-------------------------------------------------------
+
+;track.requireValidUntil = 1
 
 [acceptance: production]
 
